--- a/views/index.jade
+++ b/views/index.jade
@@ -14,9 +14,9 @@ html
 
             h1 Stock Price App
 
-            div.btn-group
-                a(href="#new" class="btn btn-default") new
-                a(href="" class="btn btn-default") list
+            div.views
+                a(href="#new" class="btn btn-default") add new
+                a(href="" class="btn btn-default") view all
 
             .wrapper
 
