include ftse250 stocks again

--- a/views/index.jade
+++ b/views/index.jade
@@ -29,6 +29,8 @@ html
                     input(name='symbol' id='symbol')
                     label(for='targetPrice') Target Price
                     input(name='targetPrice' id='targetPrice')
+                    label(for='group') group
+                    input(name='group' id='group')
                     button(type='submit') Submit
 
             script#stockTemplate(type='text/template')
